--- a/index.css
+++ b/index.css
@@ -8,7 +8,6 @@
 .qr-container {
   margin: auto;
   max-width: 280px;
-  outline: red solid 1px;
   border-radius: 20px;
   background-color: hsl(0, 0%, 100%);
   display: flex;
@@ -27,16 +26,22 @@
 }
 
 .qr-container__title {
+  font-family: "Outfit", sans-serif;
+  font-weight: 800;
   margin-top: 0;
 }
 
 .qr-container__label {
+  font-family: "Outfit", sans-serif;
+  font-weight: 200;
   margin-bottom: 0;
 }
 
 .attribution {
-  font-size: 11px;
+  font-size: 12px;
   text-align: center;
+  font-family: "Outfit", sans-serif;
+  font-weight: 200;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
