--- a/index.css
+++ b/index.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@200;800&display=swap");
 
+body {
+  margin: 0;
+}
+
 .background {
   padding: 100px 0;
   background-color: hsl(212, 45%, 89%);
